--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "react-dom": "^15.0.1",
     "react-redux": "4.4.5",
     "react-router": "^2.4.0",
-    "redux": "3.6.0"
+    "redux": "3.6.0",
+    "redux-logger": "2.7.0",
+    "redux-thunk": "2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.2.2",
@@ -15,6 +17,7 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.2.0",
     "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "6.16.0",
     "browser-sync": "^2.9.11",
     "browser-sync-spa": "^1.0.3",
     "css-loader": "^0.23.1",
