--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "immutable": "3.8.1",
     "ramda": "0.22.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "4.4.5",
     "react-router": "^2.4.0",
     "redux": "3.6.0",
+    "redux-action": "1.0.0",
     "redux-logger": "2.7.0",
     "redux-thunk": "2.1.0"
   },
