--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "redux-devtools": "3.3.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "url-loader": "0.5.7",
     "webpack": "2.1.0-beta.20",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
