--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "babel-loader": "^6.2.0",
     "babel-plugin-istanbul": "^2.0.1",
     "babel-polyfill": "^6.7.4",
+    "babel-preset-airbnb": "2.1.1",
     "babel-preset-es2015": "^6.2.0",
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "6.16.0",
     "browser-sync": "^2.9.11",
     "browser-sync-spa": "^1.0.3",
+    "chai": "3.5.0",
     "css-loader": "^0.23.1",
     "del": "^2.0.2",
+    "enzyme": "2.5.1",
     "es6-shim": "^0.35.0",
     "eslint": "^3.2.2",
     "eslint-config-xo-react": "^0.7.0",
@@ -48,6 +51,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-phantomjs-shim": "^1.1.2",
     "karma-webpack": "^1.7.0",
+    "mocha": "3.1.2",
     "node-sass": "^3.4.2",
     "phantomjs-prebuilt": "^2.1.6",
     "postcss-loader": "^0.8.0",
