--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "immutable": "3.8.1",
+    "node-sass": "3.13.1",
     "ramda": "0.22.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
